feat: add atribute alt to imgs

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div>
             <div class="half my-image-reveal">
                 <div class="text-center flutuar">
-                    <img id="my-image" src="./img/Developer activity-amico.png">
+                    <img id="my-image" src="./img/Developer activity-amico.png" alt="Imagem de um personagem escrevendo em um notebook">
                 </div>
             </div>
             <div class="skill my-skill-reveal">
@@ -244,7 +244,7 @@
             <div class="projects">
                 <div class="show-project-img">
                     <div class="project-img project-left-reveal">
-                        <img src="./img/openfinance-full.jpg" alt="" data-tooltip="Bom dia">
+                        <img src="./img/openfinance-full.jpg" alt="Imagem do sistema Openfinance" data-tooltip="">
                     </div>
                     <span class="text-span project-right-reveal">
                         <h3><b>OPENFINANCE</b></h3>
@@ -288,7 +288,7 @@
                 </div>
                 <div class="show-project-img">
                     <div class="project-img project-left-reveal">
-                        <img src="./img/api-github-full.jpg" alt="">
+                        <img src="./img/api-github-full.jpg" alt="Imagem do sistema NatureShopp">
                     </div>
                     <span class="text-span project-right-reveal">
                         <h3><b>API GITHUB</b></h3>
@@ -313,7 +313,7 @@
             <span class="journey-left-reveal"><b>Formação Acadêmica</b></span>
             <div class="show-journey journey-reveal">
                 <div class="img">
-                    <img src="./img/logotipo-umfg.jpg" alt="">
+                    <img src="./img/logotipo-umfg.jpg" alt="Logo UMFG">
                 </div>
                 <div class="title">
                     <div><b>Análise e Desenvolvimento de Sistemas</b></div>
@@ -324,7 +324,7 @@
             <span class="journey-left-reveal"><b>Experiência</b></span>
             <div class="show-journey journey-reveal">
                 <div class="img">
-                    <img src="./img/wdevel-logo.png" alt="">
+                    <img src="./img/wdevel-logo.png" alt="Logo WDevel">
                 </div>
                 <div class="title">
                     <div><b>Estágiario de Desenvolvimento Web</b></div>
@@ -335,7 +335,7 @@
             <span class="journey-left-reveal"><b>Cursos</b></span>
             <div class="show-journey journey-reveal">
                 <div class="img">
-                    <img src="./img/udemy-logo.jpg" alt="">
+                    <img src="./img/udemy-logo.jpg" alt="Logo Udemy">
                 </div>
                 <div class="title">
                     <div><b>Curso de Web Frontend</b></div>
@@ -345,7 +345,7 @@
             <div class="line line-small journey-left-reveal"></div>
             <div class="show-journey journey-reveal">
                 <div class="img">
-                    <img src="./img/logotipo-umfg.jpg" alt="">
+                    <img src="./img/logotipo-umfg.jpg" alt="Logo UMFG">
                 </div>
                 <div class="title">
                     <div><b>Oficina de GitHub</b></div>
@@ -355,7 +355,7 @@
             <div class="line line-small journey-left-reveal"></div>
             <div class="show-journey journey-reveal">
                 <div class="img">
-                    <img src="./img/logotipo-umfg.jpg" alt="">
+                    <img src="./img/logotipo-umfg.jpg" alt="Logo UMFG">
                 </div>
                 <div class="title">
                     <div><b>Oficina de Vue.js</b></div>
@@ -365,7 +365,7 @@
             <div class="line line-small journey-left-reveal"></div>
             <div class="show-journey journey-reveal">
                 <div class="img">
-                    <img src="./img/logotipo-umfg.jpg" alt="">
+                    <img src="./img/logotipo-umfg.jpg" alt="Logo UMFG">
                 </div>
                 <div class="title">
                     <div><b>Oficina de Flutter</b></div>
@@ -375,7 +375,7 @@
             <div class="line line-small journey-left-reveal"></div>
             <div class="show-journey journey-reveal">
                 <div class="img">
-                    <img src="./img/logotipo-umfg.jpg" alt="">
+                    <img src="./img/logotipo-umfg.jpg" alt="Logo UMFG">
                 </div>
                 <div class="title">
                     <div><b>Minicurso de Aplicação Web</b></div>
@@ -385,7 +385,7 @@
             <div class="line line-small journey-left-reveal"></div>
             <div class="show-journey journey-reveal">
                 <div class="img">
-                    <img src="./img/logotipo-ifto.jpg" alt="">
+                    <img src="./img/logotipo-ifto.jpg" alt="Logo UMFG">
                 </div>
                 <div class="title">
                     <div><b>Administrador de Banco de Dados</b></div>
