feat: adding new elements to new project

--- a/index.html
+++ b/index.html
@@ -306,6 +306,25 @@
                         </span>
                     </span>
                 </div>
+                <div class="show-project-img">
+                    <span class="text-span position-1 project-left-reveal">
+                        <h3><b>Weather API</b></h3>
+                        <p>Site para checar a previsão do tempo na sua cidade. Com consumo de API da OpenWeatherMap, para consultar a previsão do tempo.</p>
+                        <div class="tech-used">
+                            <i class="fa-brands fa-html5" title="HTML"></i>
+                            <i class="fa-brands fa-css3-alt" title="CSS"></i>
+                            <i class="fa-brands fa-square-js" title="Javascript"></i>
+                        </div>
+                        <a class="btn-access-project" href="https://github.com/Flipe124/project-openweather" target="_blank">Código
+                            <i class="fa-brands fa-github"></i>
+                        </a>
+                        <span class="btn-block" href="#" target="">Live Demo <i class="fa-solid fa-play"></i>
+                        </span>
+                    </span>
+                    <span class="project-img reverse-project-img position-2 project-right-reveal">
+                        <img src="./img/imagem_projeto_weather.png" alt="">
+                    </span>
+                </div>
             </div>
         </section>
         <section class="journey" id="journey">
