--- a/index.html
+++ b/index.html
@@ -309,7 +309,9 @@
                 <div class="show-project-img">
                     <span class="text-span position-1 project-left-reveal">
                         <h3><b>Weather API</b></h3>
-                        <p>Site para checar a previsão do tempo na sua cidade. Com consumo de API da OpenWeatherMap, para consultar a previsão do tempo.</p>
+                        <p>
+                            Site para checar a previsão d tempo na sua cidade. Com consumo de API da OpenWeatherMap, para consultar a previsão do tempo.
+                        </p>
                         <div class="tech-used">
                             <i class="fa-brands fa-html5" title="HTML"></i>
                             <i class="fa-brands fa-css3-alt" title="CSS"></i>
