feat: modifying info

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                     <span class="text-span position-1 project-left-reveal">
                         <h3><b>Weather API</b></h3>
                         <p>
-                            Site para checar a previsão d tempo na sua cidade. Com consumo de API da OpenWeatherMap, para consultar a previsão do tempo.
+                            Site para conferir a previsão do tempo na sua cidade. Com consumo de API da OpenWeatherMap, para consultar a previsão do tempo.
                         </p>
                         <div class="tech-used">
                             <i class="fa-brands fa-html5" title="HTML"></i>
