feat: adding new layout

--- a/index.html
+++ b/index.html
@@ -51,48 +51,51 @@
     </header>
     <main>
         <section class="apresentation my-padding" id="apresentation">
-            <div class="half mt-5 my-info-reveal">
-                <div class="title">
-                    <span class="my-name">FELIPE OLIVEIRA</span>
-                    <h1 class="my-job">
-                        DESENVOLVEDOR FRONT-END
-                        <i class="fa-solid fa-code"></i>
-                    </h1>
-                </div>
-                <p>
-                    Olá, pessoal! Recentemente, concluí minha formação em <b>Análise e Desenvolvimento de
-                        Sistemas 🚀</b> pela UMFG (2023). Tenho conhecimentos em desenvolvimento web, trabalhando com
-                    as linguagens <b>HTML</b>, <b>CSS</b>, <b>JavaScript</b>, e <b>PHP</b>. Além disso, tenho prática
-                    no uso das ferramentas <b>Git</b> e <b>Figma</b>. Estou em busca de enfrentar novos desafios e
-                    contribuir para projetos inovadores. Vamos criar algo incrível juntos! 💻✨
-                </p>
-                <div class="social">
-                    <span class="tooltip">
-                        <a href="https://www.linkedin.com/in/felipe-oliveira-dos-santos-morais-a016991b9/"
-                            target="_blank">
-                            <i class="fa-brands fa-linkedin" title="Linkedin"></i>
-                        </a>
-                        <span class="tooltiptext">Linkedin</span>
-                    </span>
-                    <span class="tooltip">
-                        <a href="https://github.com/Flipe124" target="_blank">
-                            <i class="fa-brands fa-github" title="GitHub"></i>
-                        </a>
-                        <span class="tooltiptext">GitHub</span>
-                    </span>
-                    <span class="tooltip">
-                        <a href="https://gitlab.com/Flipe124" target="_blank">
-                            <i class="fa-brands fa-gitlab" title="GitLab"></i>
-                        </a>
-                        <span class="tooltiptext">GitLab</span>
-                    </span>
+            <div class="resume mt-5 my-info-reveal">
+                <div class="my-infos">
+                    <div class="title">
+                        <span class="my-name">FELIPE OLIVEIRA</span>
+                        <h1 class="my-job">
+                            DESENVOLVEDOR FRONT-END
+                            <i class="fa-solid fa-code"></i>
+                        </h1>
+                    </div>
+                    <p>
+                        Olá, pessoal! Recentemente, concluí minha formação em <b>Análise e Desenvolvimento de
+                            Sistemas 🚀</b> pela UMFG (2023). Tenho conhecimentos em desenvolvimento web, trabalhando
+                        com
+                        as linguagens <b>HTML</b>, <b>CSS</b>, <b>JavaScript</b>, e <b>PHP</b>. Além disso, tenho
+                        prática
+                        no uso das ferramentas <b>Git</b> e <b>Figma</b>. Estou em busca de enfrentar novos desafios e
+                        contribuir para projetos inovadores. Vamos criar algo incrível juntos! 💻✨
+                    </p>
+                    <div class="social">
+                        <span class="tooltip">
+                            <a href="https://www.linkedin.com/in/felipe-oliveira-dos-santos-morais-a016991b9/"
+                                target="_blank">
+                                <i class="fa-brands fa-linkedin" title="Linkedin"></i>
+                            </a>
+                            <span class="tooltiptext">Linkedin</span>
+                        </span>
+                        <span class="tooltip">
+                            <a href="https://github.com/Flipe124" target="_blank">
+                                <i class="fa-brands fa-github" title="GitHub"></i>
+                            </a>
+                            <span class="tooltiptext">GitHub</span>
+                        </span>
+                        <span class="tooltip">
+                            <a href="https://gitlab.com/Flipe124" target="_blank">
+                                <i class="fa-brands fa-gitlab" title="GitLab"></i>
+                            </a>
+                            <span class="tooltiptext">GitLab</span>
+                        </span>
+                    </div>
                 </div>
                 <!-- <button class="btn btn-success"><b>BAIXAR CV</b></button> -->
             </div>
-            <div class="half my-image-reveal">
-                <div class="text-center flutuar">
-                    <img id="my-image" src="./img/Developer activity-amico.png" alt="Imagem de um personagem escrevendo em um notebook">
-                </div>
+            <div class="image my-image-reveal">
+                <img id="my-image" src="./img/Developer activity-amico.png"
+                    alt="Imagem de um personagem escrevendo em um notebook">
             </div>
             <div class="skill my-skill-reveal">
                 <span class="tooltip">
@@ -310,14 +313,16 @@
                     <span class="text-span position-1 project-left-reveal">
                         <h3><b>Weather API</b></h3>
                         <p>
-                            Site para conferir a previsão do tempo na sua cidade. Com consumo de API da OpenWeatherMap, para consultar a previsão do tempo.
+                            Site para conferir a previsão do tempo na sua cidade. Com consumo de API da OpenWeatherMap,
+                            para consultar a previsão do tempo.
                         </p>
                         <div class="tech-used">
                             <i class="fa-brands fa-html5" title="HTML"></i>
                             <i class="fa-brands fa-css3-alt" title="CSS"></i>
                             <i class="fa-brands fa-square-js" title="Javascript"></i>
                         </div>
-                        <a class="btn-access-project" href="https://github.com/Flipe124/project-openweather" target="_blank">Código
+                        <a class="btn-access-project" href="https://github.com/Flipe124/project-openweather"
+                            target="_blank">Código
                             <i class="fa-brands fa-github"></i>
                         </a>
                         <span class="btn-block" href="#" target="">Live Demo <i class="fa-solid fa-play"></i>
