feat: modifying img

--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
                 <!-- <button class="btn btn-success"><b>BAIXAR CV</b></button> -->
             </div>
             <div class="image my-image-reveal">
-                <img id="my-image" src="./img/Developer activity-amico.png"
+                <!-- <img id="my-image" src="./img/Developer activity-amico.png"
+                    alt="Imagem de um personagem escrevendo em um notebook"> -->
+                    <img id="my-image" src="./img/pexels-sharad-kachhi-3937174.jpg"
                     alt="Imagem de um personagem escrevendo em um notebook">
             </div>
             <div class="skill my-skill-reveal">
