feat: modifying layout

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
     </header>
     <main>
         <section class="apresentation my-padding" id="apresentation">
+            <div class="image my-image-reveal">
+                <img id="my-image" src="./img/astronauto-codificando.png" alt="Imagem de um personagem escrevendo em um notebook">
+            </div>
             <div class="resume mt-5 my-info-reveal">
                 <div class="my-infos">
                     <div class="title">
@@ -91,13 +94,6 @@
                         </span>
                     </div>
                 </div>
-                <!-- <button class="btn btn-success"><b>BAIXAR CV</b></button> -->
-            </div>
-            <div class="image my-image-reveal">
-                <!-- <img id="my-image" src="./img/Developer activity-amico.png"
-                    alt="Imagem de um personagem escrevendo em um notebook"> -->
-                    <img id="my-image" src="./img/pexels-sharad-kachhi-3937174.jpg"
-                    alt="Imagem de um personagem escrevendo em um notebook">
             </div>
             <div class="skill my-skill-reveal">
                 <span class="tooltip">
