--- a/index.html
+++ b/index.html
@@ -76,19 +76,19 @@
                         <span class="tooltip">
                             <a href="https://www.linkedin.com/in/felipe-oliveira-dos-santos-morais-a016991b9/"
                                 target="_blank">
-                                <i class="fa-brands fa-linkedin float-animation-lvl-1" title="Linkedin"></i>
+                                <i class="fa-brands fa-linkedin" title="Linkedin"></i>
                             </a>
                             <span class="tooltiptext">Linkedin</span>
                         </span>
                         <span class="tooltip">
                             <a href="https://github.com/Flipe124" target="_blank">
-                                <i class="fa-brands fa-github float-animation-lvl-2" title="GitHub"></i>
+                                <i class="fa-brands fa-github" title="GitHub"></i>
                             </a>
                             <span class="tooltiptext">GitHub</span>
                         </span>
                         <span class="tooltip">
                             <a href="https://gitlab.com/Flipe124" target="_blank">
-                                <i class="fa-brands fa-gitlab float-animation-lvl-1" title="GitLab"></i>
+                                <i class="fa-brands fa-gitlab" title="GitLab"></i>
                             </a>
                             <span class="tooltiptext">GitLab</span>
                         </span>
@@ -97,36 +97,36 @@
             </div>
             <div class="skill my-skill-reveal">
                 <span class="tooltip">
-                    <i class="fa-brands fa-html5 float-animation-lvl-1" title="HTML"></i>
+                    <i class="fa-brands fa-html5" title="HTML"></i>
                     <span class="tooltiptext">HTML</span>
                 </span>
                 <span class="tooltip">
-                    <i class="fa-brands fa-css3-alt float-animation-lvl-2" title="CSS"></i>
+                    <i class="fa-brands fa-css3-alt" title="CSS"></i>
                     <span class="tooltiptext">CSS</span>
                 </span>
                 <span class="tooltip">
-                    <i class="fa-brands fa-square-js float-animation-lvl-1" title="Javascript"></i>
+                    <i class="fa-brands fa-square-js" title="Javascript"></i>
                     <span class="tooltiptext">JavaScript</span>
                 </span>
                 <span class="tooltip">
-                    <i class="fa-brands fa-php float-animation-lvl-2"></i>
+                    <i class="fa-brands fa-php"></i>
                     <span class="tooltiptext">PHP</span>
                 </span>
                 <span class="tooltip">
-                    <i class="fa-brands fa-bootstrap float-animation-lvl-1" title="Bootstrap"></i>
+                    <i class="fa-brands fa-bootstrap" title="Bootstrap"></i>
                     <span class="tooltiptext">Bootstrap</span>
                 </span>
                 <span class="tooltip">
-                    <i class="fas fa-cogs float-animation-lvl-1" title="Jquery"></i>
+                    <i class="fas fa-cogs" title="Jquery"></i>
                     <!-- <img src="./img/jquerySvg.svg" alt="" srcset=""> -->
                     <span class="tooltiptext">Jquery</span>
                 </span>
                 <span class="tooltip">
-                    <i class="fa-brands fa-git-alt float-animation-lvl-2" title="Git"></i>
+                    <i class="fa-brands fa-git-alt" title="Git"></i>
                     <span class="tooltiptext">Git</span>
                 </span>
                 <span class="tooltip">
-                    <i class="fa-brands fa-figma float-animation-lvl-1" title="Figma"></i>
+                    <i class="fa-brands fa-figma" title="Figma"></i>
                     <span class="tooltiptext">Figma</span>
                 </span>
             </div>
