--- a/index.html
+++ b/index.html
@@ -431,6 +431,7 @@
     <script src="https://kit.fontawesome.com/1abad94d22.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="./script/scroll_reveal.js"></script>
+    <script src="./script/check_device.js"></script>
 
 </body>
 
