feat: adding new elements to show project

--- a/index.html
+++ b/index.html
@@ -244,6 +244,26 @@
             <h2 class="title-section title-reveal">PROJETOS</h2>
             <div class="projects">
                 <div class="show-project-img">
+                    <span class="text-span position-1 project-left-reveal">
+                        <h3><b>MOTOINFO</b><div class="info"><i class="fa-solid fa-circle-exclamation"></i> Em desenvolvimento</div></h3>
+                        <p>Site de ficha técnicas de motocicletas.</p>
+                        <div class="tech-used">
+                            <i class="fa-brands fa-html5" title="HTML"></i>
+                            <i class="fa-brands fa-css3-alt" title="CSS"></i>
+                            <i class="fa-brands fa-square-js" title="Javascript"></i>
+                        </div>
+                        <span class="btn-block">Código
+                            <i class="fa-brands fa-github"></i>
+                        </span>
+                        <span class="btn-block">Live Demo
+                            <i class="fa-solid fa-play"></i>
+                        </span>
+                    </span>
+                    <span class="project-img reverse-project-img position-2 project-right-reveal">
+                        <img src="./img/motoinfo.png" alt="">
+                    </span>
+                </div>
+                <div class="show-project-img">
                     <div class="project-img project-left-reveal">
                         <img src="./img/openfinance-full.jpg" alt="Imagem do sistema Openfinance" data-tooltip="">
                     </div>
