feat: adding new element image

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <main>
         <section class="apresentation my-padding" id="apresentation">
             <div class="image my-image-reveal">
-                <img id="my-image" src="./img/astronauto-codificando.png" alt="Imagem de um personagem escrevendo em um notebook">
+                <img class="float-animation" id="my-image" src="./img/astronauto-codificando.png" alt="Imagem de um personagem escrevendo em um notebook">
             </div>
             <div class="resume mt-5 my-info-reveal">
                 <div class="my-infos">
@@ -238,6 +238,9 @@
                         <i class="fa-regular fa-star"></i>
                     </span>
                 </div>
+            </div>
+            <div class="img-astro float">
+                <img class="float-animation" src="./img/astronauta-no-foguete.png" alt="">
             </div>
         </section>
         <section class="project" id="project">
