feeat: modifying link to span

--- a/index.html
+++ b/index.html
@@ -302,9 +302,9 @@
                         <a class="btn-access-project" href="#" target="_blank">Código
                             <i class="fa-brands fa-github"></i>
                         </a>
-                        <a class="btn-access-project" href="https://natureshopp.netlify.app" target="_blank">Live Demo
+                        <span class="btn-block">Live Demo
                             <i class="fa-solid fa-play"></i>
-                        </a>
+                        </span>
                     </span>
                     <span class="project-img reverse-project-img position-2 project-right-reveal">
                         <img src="./img/natureshopnew2.png" alt="">
