--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="image my-image-reveal">
                 <img class="float-animation" id="my-image" src="./img/astronauto-codificando.png" alt="Imagem de um personagem escrevendo em um notebook">
             </div>
-            <div class="resume mt-5 my-info-reveal">
+            <div class="resume my-info-reveal">
                 <div class="my-infos">
                     <div class="title">
                         <span class="my-name">FELIPE OLIVEIRA</span>
