--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                         <li class="nav-item">
                             <a class="nav-link active" href="#project">Projetos</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link active" href="#journey">Trajetória</a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
@@ -354,7 +354,7 @@
                 </div>
             </div>
         </section>
-        <section class="journey" id="journey">
+        <!-- <section class="journey" id="journey">
             <h2 class="title-section title-reveal">TRAJETÓRIA</h2>
             <span class="journey-left-reveal"><b>Formação Acadêmica</b></span>
             <div class="show-journey journey-reveal">
@@ -438,7 +438,7 @@
                     <span>IFTO - 2020</span>
                 </div>
             </div>
-        </section>
+        </section> -->
         <section class="footer footer-reveal">
             <div class="line-full"></div>
             <div class="dev">Copyright © 2024 Felipe Oliveira</div>
